--- a/main.html
+++ b/main.html
@@ -3,24 +3,26 @@
      <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="#"/> 
+        <link rel="stylesheet" href="main.css"/> 
         <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet'>
-<link href='https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css' rel='stylesheet'>
-<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-<script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js'></script>
+        <link href='https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css' rel='stylesheet'>
+        <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+        <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js'></script>
+        <script type='text/javascript' src='test.js'></script>
         <title>Форма подачи заявок</title>
      </head>
 
      <body>
-        <h4> Новое обращение </h4>
-        <form action="send.php" class="container" method="post" style="">
+        
+        <form action="test.js" class="container" method="" style="display: block;">
+            <h4 style="position: static; margin-top: 5%;"> Новое обращение </h4>
             <div class="d-flex pt-2">
                 <div class="w-100">
                     <div>
                         Оборудование 
                     </div> 
 
-                    <select name="name" 
+                    <select name="nameOborudovanie" 
                     class="w-100 px-3 custom-select my-1 mr-sm-2" 
                     id="inlineFormCustomSelectPref_7"
                     placeholder="Введите наименование или инвентарный номер оборудования"
