--- a/main.html
+++ b/main.html
@@ -130,16 +130,18 @@
                 </div>
             </div><br>
 
+            <div class="d-flex pt-2">
+                <div class="w-100">
             <div>
                 Выберите вид дефекта
             </div>
-            <select name="defect" 
+            <select name="defect1" 
                     class="w-100 px-3 custom-select my-1 mr-sm-5" 
-                    id="defect"
+                    id="defect1"
                     onclick="GetDefects()"
                     required> 
                 
-                    </select>
+                    </select></div></div>
 
             <div class="d-flex pt-2">
                 <div class="w-100">
